[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/UI/Themes/RetmisTheme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Fonts/BasicBlockFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/UI/MainMenu/NewGameMenu/NewGame.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="NewGame" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -720.0
margin_top = -417.0
margin_right = 720.0
margin_bottom = 417.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 455.0
margin_top = 292.0
margin_right = -455.0
margin_bottom = -292.0

[node name="MainVBox" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 73.0
margin_top = 25.0
margin_right = -73.0
margin_bottom = -36.0

[node name="NewGameLabel" type="Label" parent="Panel/MainVBox"]
margin_right = 388.0
margin_bottom = 16.0
hint_tooltip = "Shows the top 30 scores."
mouse_filter = 1
text = "New Game"
align = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MainVBox"]
margin_top = 20.0
margin_right = 388.0
margin_bottom = 40.0
custom_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="Panel/MainVBox"]
margin_top = 44.0
margin_right = 388.0
margin_bottom = 169.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MainVBox/MarginContainer"]
margin_top = 54.0
margin_right = 388.0
margin_bottom = 70.0
size_flags_vertical = 4

[node name="PlayerNameLabel" type="Label" parent="Panel/MainVBox/MarginContainer/HBoxContainer"]
margin_right = 192.0
margin_bottom = 16.0
text = "Player name: "

[node name="PlayerNameField" type="LineEdit" parent="Panel/MainVBox/MarginContainer/HBoxContainer"]
margin_left = 196.0
margin_right = 388.0
margin_bottom = 16.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
caret_blink = true

[node name="PlayButton" type="Button" parent="Panel/MainVBox"]
margin_top = 173.0
margin_right = 388.0
margin_bottom = 189.0
text = "Play"

[connection signal="pressed" from="Panel/MainVBox/PlayButton" to="." method="_on_PlayButton_pressed"]
